--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.0.22" %}
+{% set version = "2.1.8" %}
 
 package:
   name: libevent
@@ -7,35 +7,46 @@ package:
 source:
   fn: libevent-{{ version }}.tar.gz
   url: https://github.com/libevent/libevent/archive/release-{{ version }}-stable.tar.gz
-  sha256: ab89639b0819befb1d8b293d52047c6955f8d1c9150c2b22a0e6247930eb9128
+  sha256: 316ddb401745ac5d222d7c529ef1eada12f58f6376a66c1118eee803cb70f83d
+  patches:
+    - 0001-Port-event_rpcgen.py-to-py3.patch
+    - 0002-Add-missing-includes-into-openssl-compat.h.patch
 
 build:
   number: 0
-  skip: True  # [win]
+  run_exports:
+    # https://abi-laboratory.pro/tracker/timeline/libevent/
+    - {{ pin_subpackage('libevent', max_pin='x.x') }}
 
 requirements:
+  host:
+    - openssl
+
   build:
-    - toolchain
-    - autoconf
-    - automake
-    - libtool
-    - pkg-config
-    - openssl 1.0.*
+    - pkg-config  # [unix]
+    - autoconf    # [unix]
+    - automake    # [unix]
+    - libtool     # [unix]
+    - cmake       # [win]
+    - m2-patch    # [win]
+    - {{ compiler('c') }}
 
   run:
-    - openssl 1.0.*
+    # Will be taken care of by run_exports
+    # - openssl 1.0.*
 
 test:
   requires:
-    - python 2.*
+    - python
 
-  files:
-    - {{ SRC_DIR }}/event_rpcgen.py
-    - {{ SRC_DIR }}/test/regress.rpc
+  source_files:
+    - event_rpcgen.py
+    - test/
 
   commands:
     # Check for headers.
-    - test -d "${PREFIX}/include/event2"
+    - test -d "${PREFIX}/include/event2"  # [unix]
+    - if not exist %LIBRARY_INC%\event2 exit 1  # [win]
 
     # Check for libraries.
     {% set libs = [
@@ -45,12 +56,21 @@ test:
         "libevent_openssl",
         "libevent_pthreads"
     ] %}
+    {% set libs_win = [
+        "event",
+        "event_core",
+        "event_extra",
+    ] %}
 
     {% for each_lib in libs %}
-    - test -f "${PREFIX}/lib/{{ each_lib }}.a"
+    - test -f "${PREFIX}/lib/{{ each_lib }}.a"             # [unix]
     - test -f "${PREFIX}/lib/{{ each_lib }}.dylib"         # [osx]
     - test -f "${PREFIX}/lib/{{ each_lib }}.so"            # [linux]
-    - test -f "${PREFIX}/lib/{{ each_lib }}.la"
+    - test -f "${PREFIX}/lib/{{ each_lib }}.la"            # [unix]
+    {% endfor %}
+
+    {% for each_lib in libs_win %}
+    - if not exist "%LIBRARY_PREFIX%/lib/{{ each_lib }}.lib" exit 1  # [win]
     {% endfor %}
 
     {% set pkgconfigs = [
@@ -61,18 +81,25 @@ test:
 
     # Check for pkg-config files.
     {% for each_pkgconfig in pkgconfigs %}
-    - test -f "${PREFIX}/lib/pkgconfig/{{ each_pkgconfig }}.pc"
+    - test -f "${PREFIX}/lib/pkgconfig/{{ each_pkgconfig }}.pc"  # [unix]
     {% endfor %}
 
     # Run included Python script.
-    - python event_rpcgen.py regress.rpc regress.gen.h regress.gen.c
+    - python event_rpcgen.py test/regress.rpc test/regress.gen.h test/regress.gen.c
 
 about:
   home: http://libevent.org/
   license: BSD 3-Clause
   license_family: BSD
   license_file: LICENSE
+  description: |
+    The libevent API provides a mechanism to execute a callback function when
+    a specific event occurs on a file descriptor or after a timeout has been
+    reached. Furthermore, libevent also supports callbacks due to signals or
+    regular timeouts.
   summary: An event notification library.
+  doc_url: http://www.wangafu.net/~nickm/libevent-1.4/doxygen/html/
+  dev_url: https://github.com/libevent/libevent
 
 extra:
   recipe-maintainers:
