Update the test script
As `source_files` changes how the files are copied into the testing
directory (namely it preserves the directory structure from source where
these files were copied from), update the test step to point at the
updated location for `.rpc`.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -65,7 +65,7 @@ test:
     {% endfor %}
 
     # Run included Python script.
-    - python event_rpcgen.py regress.rpc regress.gen.h regress.gen.c
+    - python event_rpcgen.py test/regress.rpc regress.gen.h regress.gen.c
 
 about:
   home: http://libevent.org/
