--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,6 +29,7 @@ requirements:
     - libtool     # [unix]
     - cmake       # [win]
     - m2-patch    # [win]
+    - make
     - {{ compiler('c') }}
     - openssl
 
