--- a/.ci_support/win_c_compilervs2015vc14.yaml
+++ b/.ci_support/win_c_compilervs2015vc14.yaml
@@ -11,3 +11,10 @@ openssl:
 pin_run_as_build:
   openssl:
     max_pin: x.x.x
+  vc:
+    max_pin: x
+vc:
+- '14'
+zip_keys:
+- - vc
+  - c_compiler
