--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ build:
   number: 0
   run_exports:
     # https://abi-laboratory.pro/tracker/timeline/libevent/
-    - {{ pin_subpackage('libevent', max_pin='x.x') }}
+    - {{ pin_subpackage('libevent', max_pin='x.x.x') }}
 
 requirements:
   build:
