Fix location of DLLs on Windows
Resolves https://github.com/conda-forge/libevent-feedstock/issues/16

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,9 +10,10 @@ source:
   sha256: 52c9db0bc5b148f146192aa517db0762b2a5b3060ccc63b2c470982ec72b9a79
   patches:
     - 0374b55942e533a3c3997439481a8d05d6c8f729.patch
+    - 0001-Fix-destination-for-DLLs-lib-bin.patch
 
 build:
-  number: 0
+  number: 1
   run_exports:
     # https://abi-laboratory.pro/tracker/timeline/libevent/
     - {{ pin_subpackage('libevent', max_pin='x.x') }}
@@ -70,6 +71,7 @@ test:
 
     {% for each_lib in libs_win %}
     - if not exist "%LIBRARY_PREFIX%/lib/{{ each_lib }}.lib" exit 1  # [win]
+    - if not exist "%LIBRARY_PREFIX%/bin/{{ each_lib }}.dll" exit 1  # [win]
     {% endfor %}
 
     {% set pkgconfigs = [
