Update max_pin to x.x.x in run_exports
SONAME got bumped in a patch version

xref: https://abi-laboratory.pro/index.php?view=objects_report&l=libevent&v1=2.1.10&v2=2.1.11

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ build:
   number: 1
   run_exports:
     # https://abi-laboratory.pro/tracker/timeline/libevent/
-    - {{ pin_subpackage('libevent', max_pin='x.x') }}
+    - {{ pin_subpackage('libevent', max_pin='x.x.x') }}
 
 requirements:
   build:
