--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
     - 0001-Fix-destination-for-DLLs-lib-bin.patch
 
 build:
-  number: 1
+  number: 2
   run_exports:
     # https://abi-laboratory.pro/tracker/timeline/libevent/
     - {{ pin_subpackage('libevent', max_pin='x.x.x') }}
@@ -64,7 +64,7 @@ test:
     ] %}
 
     {% for each_lib in libs %}
-    - test -f "${PREFIX}/lib/{{ each_lib }}.a"             # [unix]
+    - test ! -f "${PREFIX}/lib/{{ each_lib }}.a"             # [unix]
     - test -f "${PREFIX}/lib/{{ each_lib }}.dylib"         # [osx]
     - test -f "${PREFIX}/lib/{{ each_lib }}.so"            # [linux]
     {% endfor %}
