Use any python version for testing

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
     - build-with-no-undefined.patch  # [osx and arm64]
 
 build:
-  number: 2
+  number: 3
   run_exports:
     # https://abi-laboratory.pro/tracker/timeline/libevent/
     - {{ pin_subpackage('libevent', max_pin='x.x.x') }}
@@ -38,8 +38,7 @@ requirements:
 
 test:
   requires:
-    - python 2.7  # [win and vc<14]
-    - python 3.6  # [not (win and vc<14)]
+    - python *
 
   source_files:
     - event_rpcgen.py
