--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -1,16 +1,16 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '11.0'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
 - '11'
+cdt_name:
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
-macos_machine:
-- arm64-apple-darwin20.0.0
+docker_image:
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 openssl:
 - '3'
 target_platform:
-- osx-arm64
+- linux-64
