--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,9 +8,8 @@ source:
   url: https://github.com/libevent/libevent/archive/refs/tags/release-{{ version }}-stable.tar.gz
   sha256: 7180a979aaa7000e1264da484f712d403fcf7679b1e9212c4e3d09f5c93efc24
   patches:
-    - 0374b55942e533a3c3997439481a8d05d6c8f729.patch
-    - 0001-Fix-destination-for-DLLs-lib-bin.patch
-    - build-with-no-undefined.patch  # [osx and arm64]
+    - patches/0001-Fix-destination-for-DLLs-lib-bin.patch
+    - patches/0002-link-correct-libs.patch                 # [osx and arm64]
 
 build:
   number: 0
