--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,15 +19,9 @@ build:
 
 requirements:
   build:
-    - pkg-config  # [unix]
-    - autoconf    # [unix]
-    - automake    # [unix]
-    - libtool     # [unix]
-    - cmake       # [win]
-    - m2-patch    # [win]
-    - make
     - {{ compiler('c') }}
-    - openssl
+    - cmake
+    - ninja
   host:
     - openssl
 
